resolved overflow error with email footer -> solved by changing padding property into margin property

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto Condensed', sans-serif;
-
   scroll-behavior: smooth;
 }
 
+article section {
+  overflow: hidden;
+}
 button {
   outline: none;
 }
